# C-Capstone-LAME-MP3-converter

./: .gitignore  CMakeLists.txt  FindLame.cmake  LICENSE.md  README.md
src/: assemblerlame.cpp  assemblerlame.h  lame.h  main.cpp  taskmanager.cpp  taskmanager.h
src/test/: test1.cpp
